--- a/src/assets/fontello/css/fontello.css
+++ b/src/assets/fontello/css/fontello.css
@@ -1,11 +1,12 @@
+@charset "UTF-8";
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?68836603');
-  src: url('../font/fontello.eot?68836603#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?68836603') format('woff2'),
-       url('../font/fontello.woff?68836603') format('woff'),
-       url('../font/fontello.ttf?68836603') format('truetype'),
-       url('../font/fontello.svg?68836603#fontello') format('svg');
+  src: url('../font/fontello.eot?30117614');
+  src: url('../font/fontello.eot?30117614#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?30117614') format('woff2'),
+       url('../font/fontello.woff?30117614') format('woff'),
+       url('../font/fontello.ttf?30117614') format('truetype'),
+       url('../font/fontello.svg?30117614#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?68836603#fontello') format('svg');
+    src: url('../font/fontello.svg?30117614#fontello') format('svg');
   }
 }
 */
@@ -85,4 +86,6 @@
 .icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-desktop:before { content: '\f108'; } /* '' */
 .icon-gamepad:before { content: '\f11b'; } /* '' */
+.icon-moon:before { content: '\f186'; } /* '' */
 .icon-cart-arrow-down:before { content: '\f218'; } /* '' */
+.icon-sun:before { content: '󨄚'; } /* '\e811a' */
